Part-3/Network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-service-deny-all
  namespace: app-stack
spec:
  podSelector:
    matchLabels:
      app: auth-service
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: data-service
    ports:
      - protocol: TCP
        port: 5678
  - to:
    - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
    ports:
      - protocol: UDP
        port: 53

# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: auth-service-deny-all
#   namespace: app-stack
# spec:
#   podSelector:
#     matchLabels:
#       app: auth-service
#   policyTypes:
#     - Egress
